// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article flag 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Component
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <IconDiamond
      fillColour="black"
      height={8}
      width={8}
    />
  </Component>
  <Text
    accessibilityLabel="No Colour Flag"
    style={
      Array [
        Object {
          "fontFamily": "TimesDigitalW04-RegularSC",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 1.4,
        },
        Object {
          "color": "black",
        },
      ]
    }
    testID="flag-No Colour"
  >
    no colour
  </Text>
</Component>
`;

exports[`2. red article flag 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <Component
    style={
      Object {
        "marginBottom": 1,
        "marginRight": 5,
      }
    }
  >
    <IconDiamond
      fillColour="red"
      height={8}
      width={8}
    />
  </Component>
  <Text
    accessibilityLabel="Coloured Red Flag"
    style={
      Array [
        Object {
          "fontFamily": "TimesDigitalW04-RegularSC",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 1.4,
        },
        Object {
          "color": "red",
        },
      ]
    }
    testID="flag-Coloured Red"
  >
    coloured red
  </Text>
</Component>
`;
